packages/jsii/test/negatives/neg.inheritance-changes-types.2.ts
export class Superclass {}
export class Subclass extends Superclass {}

export class Something {
  public returnSomething(): Superclass {
    return new Superclass();
  }
}

export class SomethingSpecific extends Something {
  public returnSomething(): Subclass {
    return new Subclass();
  }
}
